--- a/index.html
+++ b/index.html
@@ -331,19 +331,6 @@
           <div class="col-sm-3">
             <img src="" alt="team-member" class="img-responsive">
             <h4>Ayan Agrawal</h4>
-            <h5>Founder</h5>
-            <p></p>
-            <ul class="list-inline top20">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
-            </ul>
-          </div> <!-- team-member -->
-
-          <div class="col-sm-3">
-            <img src="" alt="team-member" class="img-responsive">
-            <h4>XYZ</h4>
             <h5>Web Designer</h5>
             <p></p>
             <ul class="list-inline top20">
@@ -356,8 +343,8 @@
 
           <div class="col-sm-3">
             <img src="" alt="team-member" class="img-responsive">
-            <h4>XYZ</h4>
-            <h5>Manager</h5>
+            <h4>Karan Shah</h4>
+            <h5>Android Developer</h5>
             <p></p>
             <ul class="list-inline top20">
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -367,18 +354,7 @@
             </ul>
           </div> <!-- team-member -->
 
-          <div class="col-sm-3">
-            <img src="" alt="team-member" class="img-responsive">
-            <h4>XYZ</h4>
-            <h5>Graphic Designer</h5>
-            <p></p>
-            <ul class="list-inline top20">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
-            </ul>
-          </div> <!-- team-member -->
+          
         </div> <!-- end row -->
 
         <div class="row margin-top">
